ingess-images/Deployement-zayshop.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8s-zayshop
  namespace: prod
  annotations: 
    kubernets.io/change-cause: "Deploy to zayshop"
spec:
  minReadySeconds: 5
  replicas: 4
  selector:
    matchLabels:
      app: zayshop-app
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
  template:
    metadata:
      name: zayshoppods
      labels:
        app: zayshop-app
    spec:
      containers:
        - name: zayshop-container
          image: 211535859060.dkr.ecr.ap-south-1.amazonaws.com/prod/images:zayshop
          ports:
            - containerPort: 80
          imagePullPolicy: Always
