ingess-images/Service-catlog.yaml
apiVersion: v1
kind: Service

metadata:
  name: svcdp
  namespace: prod

spec:
  type: NodePort

  selector:
    app: catlog-app

  ports:
    - port: 80
      targetPort: 80
      nodePort: 32000
